@@ -322,6 +322,13 @@ class HTMLTranslator(writers._html_base.HTMLTranslator):
             classes.remove(tags[0])
         else:
             node.html5tagname = 'span'
+        if (classes == ['ln'] and isinstance(node.parent, nodes.literal_block)
+            and 'code' in node.parent.get('classes')):
+            if self.body[-1] == '<code>':
+                self.body[-1] = '<code data-lineno="%s">'%node.astext()
+            else:
+                self.body.append('</code><code data-lineno="%s">'
+                                 % node.astext())
         self.body.append(self.starttag(node, node.html5tagname, ''))
 
     def depart_inline(self, node):
@@ -413,7 +420,7 @@ class HTMLTranslator(writers._html_base.HTMLTranslator):
     # (see responsive.css how this is used for sidebar navigation).
     # TODO: use the new HTML5 element <aside>?
     def visit_topic(self, node):
-        if ('contents' in node['classes'] 
+        if ('contents' in node['classes']
             and isinstance(node.parent, nodes.document)):
             self.body_prefix[0] = '</head>\n<body class="with-toc">\n'
         self.body.append(self.starttag(node, 'div', CLASS='topic'))
